# eos-payg

./: .flake8  .gitignore  .gitmodules  Dockerfile.build  README  README.md  eos-payg.doap  meson.build  meson_options.txt
.tx/: config
debian/: changelog  control  copyright  eos-payg-data.install  eos-payg-generate-tests.install  eos-payg-generate.install  eos-payg-generate.links  eos-paygd-tests.install  eos-paygd.install  eos-paygd.postinst  libeos-payg-1-dev.install  libeos-payg-1-tests.install  libeos-payg-codes-1-tests.install  libeos-payg-helper-1-tests.install  not-installed  rules
debian/tests/: control  gnome-desktop-testing  gnome-desktop-testing-root
dracut/: meson.build  module-setup.sh.in
eos-payg-csv/: README.md  eos-payg-csv  meson.build
eos-payg-csv/tests/: eos-payg-csv.py  meson.build  short-key.csv  valid-2-keys-dupes.csv  wrong-columns.csv
eos-payg-ctl/: eos-payg-ctl  get-clock-boottime.c  meson.build
eos-payg-generate/: main.c  meson.build
eos-payg-generate/docs/: eos-payg-generate.8
eos-payg-generate/tests/: eos-payg-generate.py  meson.build  taptestrunner.py
eos-paygd/: com.endlessm.Payg1.conf.in  com.endlessm.Payg1.service.in  eos-payg.conf  eos-paygd-2.service.in  eos-paygd.conf.in  eos-paygd.service.in  eos-paygd.tmpfile  eos-paygd.tmpfiles.conf.in  main.c  meson.build
eos-paygd/docs/: eos-payg.conf.5  eos-paygd.8
eos-paygd/tests/: eos-paygd.py  meson.build
libeos-payg/: boottime-source.c  boottime-source.h  clock-jump-source.c  clock-jump-source.h  clock.c  clock.h  com.endlessm.Payg1.xml  efi.c  efi.h  errors.c  errors.h  fake-clock.c  fake-clock.h  hwclock.c  libeos-payg.gresource.xml  manager-interface.c  manager-interface.h  manager-service.c  manager-service.h  manager.c  manager.h  meson.build  multi-task.c  multi-task.h  provider-loader.c  provider-loader.h  provider.c  provider.h  real-clock.c  real-clock.h  service.c  service.h  util.c  util.h
libeos-payg-codes/: codes.c  codes.h  meson.build
libeos-payg-codes/tests/: codes.c  meson.build
libeos-payg/tests/: boottime-source.c  clock-jump-source.c  manager-service.c  manager.c  meson.build  multi-task.c  provider-loader.c
libeos-payg/tests/plugins/: epg-test-provider.plugin.in  meson.build  test-provider-one.c  test-provider-two.c  test-provider.c  test-provider.h
libhelper/: config-file.c  config-file.h  meson.build
libhelper/tests/: config-file.c  config-file.gresource.xml  meson.build
manual-provision-payg/: Endless_Factory_Test.tar  Endless_Factory_Test.tar.sha256  code_gen.py  config.json  hide_provenance.sh  meson.build  start.sh
po/: POTFILES.in  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  csb.po  cy.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  eo.po  eos-payg.pot  es.po  et.po  eu.po  fa.po  fi.po  fil.po  fr.po  fur.po  fy.po  ga.po  gd.po  (+80 more)
provision-phase-1/: Endless_Factory_Test.tar.sha256  Jenkinsfile  code_gen.py  config.json  meson.build  start.sh
