option(
  'payg_daemon_user',
  type: 'string',
  value: 'eos-paygd',
  description: 'username to run the payg daemon as',
)
option(
  'installed_tests',
  type: 'boolean',
  value: false,
  description: 'enable installed tests'
)
option('systemdsystemunitdir',
  description: 'the directory to install systemd system units to (default: looked up with pkgconfig)',
  type: 'string'
)
option('sysusersdir',
  description: 'the directory to install sysusers files to (default: looked up with pkgconfig)',
  type: 'string',
)
