option(
  'tests',
  type: 'combo',
  choices: ['safe', 'unsafe'],
  value: 'safe',
  description: 'enable unsafe tests with =unsafe'
)
option(
  'installed_tests',
  type: 'boolean',
  value: false,
  description: 'enable installed tests'
)
option('systemdsystemunitdir',
  description: 'the directory to install systemd system units to (default: looked up with pkgconfig)',
  type: 'string'
)
option('tmpfilesdir',
  description: 'the directory to install tmpfiles to (default: looked up with pkgconfig)',
  type: 'string'
)
